@@ -1,3 +1,4 @@
+2017-Mar-14 ddamiani    Tag V08-07-03.  Updated QuadAdc ConfigV1 so it is tagged as a config type - fix for psana.
 2017-Mar-14 ddamiani    Tag V08-07-02.  Added ConfigV2 for the PSI Jungfrau detector and ConfigV1 for the QuadAdc.
 2017-Jan-10 ddamiani    Tag V08-07-01.  Added DetLab to DetInfo Detector enum.
 2016-Dec-16 ddamiani    Tag V08-07-00.  Added ConfigV1 and ElementV1 for the PSI Jungfrau detector.
